--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,1 +1,5 @@
 @import "libs/bootstrap.scss";
+@import "variable/variable.scss";
+@import "common/common.scss";
+@import 'accueil/accueil.scss';
+@import "reservation/reservation.scss";
