--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,13 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'main/layout/navBar.html.twig' %}
         <header>
-            {% include 'main/layout/navBar.html.twig' %}
+            {% include 'main/layout/header.html.twig' %}
         </header>
         {% block body %}{% endblock %}
+        <footer class="bg-success py-3" id="footer">
+            {% include 'main/layout/footer.html.twig' %}
+        </footer>
     </body>
 </html>
