--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,8 +4,13 @@
 
 {% block body %}
 
-<div class="container">
-    <h1 class="text-center text-danger">Hello {{ controller_name }}! ✅</h1>
-
+<div class="container py-4">
+    <div class="row" id="card-accueil">
+        {% for resto in restos %}
+            <div class="col-4">
+                {% include 'main/layout/_cardAccueil.html.twig' %}
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
