start page reservation

--- a/templates/main/layout/_cardAccueil.html.twig
+++ b/templates/main/layout/_cardAccueil.html.twig
@@ -14,7 +14,7 @@
             <small>{{ resto['adresse']}} </small>
         </p>
         <div class="d-grid gap-2">
-            <a href="#" class="btn btn-success">RÉSERVEZ</a>
+            <a href="{{path('reservations')}}" class="btn btn-success">RÉSERVEZ</a>
         </div>
     </div>
 </div>
