fix link mentions-legales

--- a/templates/main/layout/footer.html.twig
+++ b/templates/main/layout/footer.html.twig
@@ -7,8 +7,8 @@
             <ul class="d-flex">
                 <li class="me-1"><a href="#" class="text-white">CGU -</a></li>
                 <li class="me-1"><a href="#" class="text-white">CGV -</a></li>
-                <li class="me-1"><a href="#" class="text-white">mentions légales -</a></li>
-                <li class="me-1"><a href="#" class="text-white">politique de confidentialité</a></li>
+                <li class="me-1"><a href="{{path('mentions-legales')}}" class="text-white">Mentions légales -</a></li>
+                <li class="me-1"><a href="#" class="text-white">Politique de confidentialité</a></li>
             </ul>
         </div>
     </div>
