--- a/templates/main/layout/navBar.html.twig
+++ b/templates/main/layout/navBar.html.twig
@@ -29,7 +29,7 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Accueil</a>
+                    <a class="nav-link text-light" href="{{path('accueil')}}">Accueil</a>
                 </li>
               
             </ul>
