--- a/templates/main/mentions-legales.html.twig
+++ b/templates/main/mentions-legales.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Mentions légales{% endblock %}
 {% block body %}
+<div class="container">
  <h2>1) Objet</h2>
    <p> Les présentes conditions générales ont pour objet de définir les modalités et conditions d’utilisation des services proposés sur le site (ci-après : les « Services »), ainsi que de définir les droits et obligations des parties dans ce cadre.
 
@@ -209,4 +210,5 @@
     </p>
     <h2>22) Entrée en vigueur</h2>
    <p> Les présentes conditions générales sont entrées en vigueur le 31/12/2016.</p>
+   </div>
    {% endblock %}
