stepper reservation + responsive

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,3 +3,4 @@
 @import "common/common.scss";
 @import 'accueil/accueil.scss';
 @import "reservation/reservation.scss";
+@import "reservation/stepperReservation.scss";
