--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,7 +7,7 @@
 <div class="container py-4">
     <div class="row" id="card-accueil">
         {% for resto in restos %}
-            <div class="col-4">
+            <div class="col-12 col-md-6 col-lg-4 mt-2">
                 {% include 'main/layout/_cardAccueil.html.twig' %}
             </div>
         {% endfor %}
