--- a/templates/main/layout/navBar.html.twig
+++ b/templates/main/layout/navBar.html.twig
@@ -12,7 +12,7 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
         >
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars text-white"></i>
         </button>
 
         <!-- Collapsible wrapper -->
