--- a/templates/main/layout/footer.html.twig
+++ b/templates/main/layout/footer.html.twig
@@ -1,14 +1,15 @@
 <div class="container">
     <div class="row justify-content-between align-items-center">
-        <div class="col-2">
+        <div class="col-md-2 col-12">
             <img height="60" src="{{ asset('images/logo/logo.png') }}" alt="mon logo">
         </div>
-        <div class="col-5">
-            <ul class="d-flex">
-                <li class="me-1"><a href="#" class="text-white">CGU -</a></li>
-                <li class="me-1"><a href="#" class="text-white">CGV -</a></li>
-                <li class="me-1"><a href="{{path('mentions-legales')}}" class="text-white">Mentions légales -</a></li>
-                <li class="me-1"><a href="#" class="text-white">Politique de confidentialité</a></li>
+
+        <div class="col-lg-6 col-md-8 col-12 mt-2 mt-md-0">
+            <ul class="d-md-flex">
+                <li class="me-1"><a href="#" class="text-white">CGU </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="#" class="text-white">CGV </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="{{path('mentions-legales')}}"  class="text-white">mentions légales </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="#" class="text-white">politique de confidentialité</a></li>
             </ul>
         </div>
     </div>
