--- a/templates/main/reservation.html.twig
+++ b/templates/main/reservation.html.twig
@@ -5,12 +5,13 @@
 {% block body %}
 
     <div class="container py-4">
-        <div class="row">
-            <div class="col-4">
-                <div class="border border-danger bg-orange-lighter py-2 px-3">
-                    <h2 class="text-danger text-center">{{ resto['name'] }}</h2>
-                </div>
-                <div class="d-flex my-3">
+        <div class="border border-danger bg-orange-lighter py-2 px-3 w-responsive mx-auto">
+            <h2 class="text-danger text-center">{{ resto['name'] }}</h2>
+        </div>
+        <div class="row justify-content-center mt-3">
+            <div class="col-12 col-lg-4 d-flex flex-column justify-content-center order-lg-first order-last">
+
+                <div class="d-flex my-3 justify-content-center  justify-content-lg-around">
                     {% for tag in resto['tags'] %}
                         <button class="btn btn-success me-2">{{ tag }}</button>
                     {% endfor %}
@@ -27,12 +28,90 @@
                 </div>
                 <p>
                     <i class="fas fa-phone-alt text-danger me-2"></i>
-                    {{ resto['telephone'] }}
+                    <a href="tel:+33625354587">{{ resto['telephone'] }}</a>
                 </p>
                 <div class="d-grid gap-2">
-                    <a href="{{path('reservations')}}" class="btn btn-success">VOIR LA CARTE</a>
+                    <a href="{{path('reservations')}}" class="btn btn-success">VOIR LE MENU</a>
                 </div>
             </div>
+
+            <div class="col-12 col-lg-8 mt-3 mt-lg-0 order-lg-last order-first">
+                <div
+                        id="carouselExampleCrossfade"
+                        class="carousel slide carousel-fade"
+                        data-mdb-ride="carousel"
+                >
+                    <div class="carousel-indicators">
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselExampleCrossfade"
+                                data-mdb-slide-to="0"
+                                class="active"
+                                aria-current="true"
+                                aria-label="Slide 1"
+                        ></button>
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselExampleCrossfade"
+                                data-mdb-slide-to="1"
+                                aria-label="Slide 2"
+                        ></button>
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselExampleCrossfade"
+                                data-mdb-slide-to="2"
+                                aria-label="Slide 3"
+                        ></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img
+                                    src="{{ resto['image'] }}"
+                                    class="d-block w-100"
+                                    alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                    src="https://mdbootstrap.com/img/new/slides/042.jpg"
+                                    class="d-block w-100"
+                                    alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                    src="https://mdbootstrap.com/img/new/slides/043.jpg"
+                                    class="d-block w-100"
+                                    alt="..."
+                            />
+                        </div>
+                    </div>
+                    <button
+                            class="carousel-control-prev"
+                            type="button"
+                            data-mdb-target="#carouselExampleCrossfade"
+                            data-mdb-slide="prev"
+                    >
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                            class="carousel-control-next"
+                            type="button"
+                            data-mdb-target="#carouselExampleCrossfade"
+                            data-mdb-slide="next"
+                    >
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+
         </div>
+
+
+    </div>
+    <div id="stepperReservation" class="pb-5">
+        {% include 'main/layout/_stepperReservation.html.twig' %}
     </div>
 {% endblock %}
