create all Entity about Restaurants

--- a/assets/styles/reservation/stepperReservation.scss
+++ b/assets/styles/reservation/stepperReservation.scss
@@ -83,8 +83,8 @@
         .step-arrow {
           position: absolute;
           top: 33%;
-          left: 113%;
-          max-width: 57%;
+          left: 100%;
+          width: 80px;
         }
         .step-order {
           display: block;
