--- a/templates/main/reservation.html.twig
+++ b/templates/main/reservation.html.twig
@@ -6,32 +6,30 @@
 
     <div class="container py-4">
         <div class="border border-danger bg-orange-lighter py-2 px-3 w-responsive mx-auto">
-            <h2 class="text-danger text-center">{{ resto['name'] }}</h2>
+            <h2 class="text-danger text-center">{{ resto.nom }}</h2>
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-12 col-lg-4 d-flex flex-column justify-content-center order-lg-first order-last">
 
-                <div class="d-flex my-3 justify-content-center  justify-content-lg-around">
-                    {% for tag in resto['tags'] %}
-                        <button class="btn btn-success me-2">{{ tag }}</button>
+                <div class="d-flex my-3 justify-content-center justify-content-lg-around">
+                    <button class="btn btn-success me-2">{{ resto.idTypeCuisine.nom }}</button>
+                    {% for tag in resto.tags %}
+                        <button class="btn btn-success me-2">{{ tag.nom }}</button>
                     {% endfor %}
                 </div>
-                <p> Lorem ipsum dolor sit amet. Sit esse obcaecati qui magni atque perferendis recusandae nam omnis
-                    culpa. Ad omnis illo et assumenda enim eum fuga modi eum praesentium nemo est corrupti facilis eos
-                    quibusdam quidem. In expedita veniam et explicabo esse et nostrum fuga est blanditiis nesciunt et
-                    magni nisi.
+                <p> {{ resto.description }}
                 </p>
                 <div class="d-flex">
                     <i class="fas fa-map-marker-alt text-danger mt-1"></i>
-                    <p class="ms-2">{{ resto['adresse'] }}</p>
+                    <p class="ms-2">{{ resto.rue }} {{ resto.codePostal }} {{ resto.ville }} </p>
                     <a href="#" class="text-success ms-3">VOIR LE PLAN</a>
                 </div>
                 <p>
                     <i class="fas fa-phone-alt text-danger me-2"></i>
-                    <a href="tel:+33625354587">{{ resto['telephone'] }}</a>
+                    <a href="tel:+33625354587">{{ resto.numTelephone }}</a>
                 </p>
                 <div class="d-grid gap-2">
-                    <a href="{{path('reservations')}}" class="btn btn-success">VOIR LE MENU</a>
+                    <a href="{{asset( 'images/restaurants/'~resto.slugMenu) }}" class="btn btn-success" target="_blank">VOIR LE MENU</a>
                 </div>
             </div>
 
@@ -42,49 +40,41 @@
                         data-mdb-ride="carousel"
                 >
                     <div class="carousel-indicators">
-                        <button
-                                type="button"
-                                data-mdb-target="#carouselExampleCrossfade"
-                                data-mdb-slide-to="0"
-                                class="active"
-                                aria-current="true"
-                                aria-label="Slide 1"
-                        ></button>
-                        <button
-                                type="button"
-                                data-mdb-target="#carouselExampleCrossfade"
-                                data-mdb-slide-to="1"
-                                aria-label="Slide 2"
-                        ></button>
-                        <button
-                                type="button"
-                                data-mdb-target="#carouselExampleCrossfade"
-                                data-mdb-slide-to="2"
-                                aria-label="Slide 3"
-                        ></button>
+
+                        {% for numImage in resto.imagesRestaurants %}
+                            {% if loop.index == 1 %}
+                            <button
+                                    type="button"
+                                    data-mdb-target="#carouselExampleCrossfade"
+                                    data-mdb-slide-to="0"
+                                    class="active"
+                                    aria-current="true"
+                                    aria-label="Slide 1"
+                            ></button>
+                            {% elseif loop.index<=loop.length %}
+                            <button
+                                    type="button"
+                                    data-mdb-target="#carouselExampleCrossfade"
+                                    data-mdb-slide-to="{{ loop.index-1 }}"
+                                    aria-label="{{ 'Slide'~loop.index }}"
+                            ></button>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        {% for image in resto.imagesRestaurants %}
+                            {% if loop.index == 1  %}
+                                <div class="carousel-item active">
+                            {% else %}
+                                <div class="carousel-item">
+                            {% endif %}
                             <img
-                                    src="{{ resto['image'] }}"
+                                    src=" {{asset('images/restaurants/'~ image.url) }}"
                                     class="d-block w-100"
                                     alt="..."
                             />
                         </div>
-                        <div class="carousel-item">
-                            <img
-                                    src="https://mdbootstrap.com/img/new/slides/042.jpg"
-                                    class="d-block w-100"
-                                    alt="..."
-                            />
-                        </div>
-                        <div class="carousel-item">
-                            <img
-                                    src="https://mdbootstrap.com/img/new/slides/043.jpg"
-                                    class="d-block w-100"
-                                    alt="..."
-                            />
-                        </div>
+                        {% endfor %}
                     </div>
                     <button
                             class="carousel-control-prev"
