--- a/templates/main/layout/navBar.html.twig
+++ b/templates/main/layout/navBar.html.twig
@@ -31,7 +31,22 @@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="{{path('accueil')}}">Accueil</a>
                 </li>
-              
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('admin')}}">Admin</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Déconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">Se Connecter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('app_register')}}">S'enregistrer</a>
+                    </li>
+                {% endif %}
             </ul>
             <!-- Left links -->
         </div>
