--- a/templates/main/layout/navBar.html.twig
+++ b/templates/main/layout/navBar.html.twig
@@ -37,7 +37,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Déconnexion</a>
+                        <a class="nav-link active" aria-current="page" href="{{path('logout')}}">Déconnexion</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
