Modify fixtures ans do migration with user and resetPassword

--- a/templates/main/layout/_cardAccueil.html.twig
+++ b/templates/main/layout/_cardAccueil.html.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
         <img
-                src="{{'images/restaurants/'~ resto.imagesRestaurants[0].url }}"
+                src="{{'images/restaurants/'~resto.slugFolderImage~'/'~ resto.imagesRestaurants[0].url }}"
         />
         <a href="#">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
