--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,21 +11,21 @@
 
     <div class="row">
         <div class="col-md"></div>
-        <div class="col-md">
-        <div class="card px-4">
-            <form class="mt-4" method="POST">
-    {{ form_start(registrationForm) }}
+            <div class="col-md">
+                <div class="card px-4">
+            <form class="m-4" method="POST">
+        {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn btn-primary mt-4 mb-4" type="submit">Register</button>
-    {{ form_end(registrationForm) }}
+                <button class="btn btn-primary mt-4 mb-4" type="submit">Register</button>
+        {{ form_end(registrationForm) }}
             </form>
+                </div>
         </div>
-    </div>
         <div class="col-md"></div>
     </div>
 </div>
