search form style

--- a/templates/main/layout/header.html.twig
+++ b/templates/main/layout/header.html.twig
@@ -3,8 +3,40 @@
         <div class="row">
             <div class="col-7">
                 <h1 class="text-danger">Découvrez et réservez le meilleur restaurant</h1>
-                
+                <div class="row mt-4">
+                    <div class="col">
+                        <div class="card p-4">
+                            <form>
+                                <div class="col-auto p-2">
+
+                                    <input type="text" class="form-control fa" id="name" placeholder="&#xf2e7; Nom du restaurant">
+                                </div>
+                                <div class="col-auto p-2">
+
+                                    <input type="text" class="form-control fa" id="code_postal" placeholder="&#xf3c5; Code Postal">
+                                </div>
+                                <div class="col-auto p-2">
+
+                                    <input type="text" class="form-control fa" id="type_cuisine" placeholder="&#xf562; Type de cuisine">
+                                </div>
+                                <div class="col p-2">
+                                    <button class="btn btn-block btn-success" type="submit">
+                                        Recherche
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+
+                    </div>
+                    <div class="col col-lg-2">
+
+                    </div>
+                </div>
+
             </div>
+
             <div class="col-5">
                 <img src="{{ asset('images/header.png') }}" alt="header presentation" class="img-fluid">
             </div>
