formulaire de recherche

--- a/templates/main/layout/header.html.twig
+++ b/templates/main/layout/header.html.twig
@@ -9,7 +9,7 @@
                             <form>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="name" placeholder="&#xf2e7; Nom du restaurant">
+                                    <input type="search" class="form-control fa" id="input-search" placeholder="&#xf2e7; Nom du restaurant">
                                 </div>
                                 <div class="col-auto p-2">
 
@@ -20,11 +20,10 @@
                                     <input type="text" class="form-control fa" id="type_cuisine" placeholder="&#xf562; Type de cuisine">
                                 </div>
                                 <div class="col p-2">
-                                    <button class="btn btn-block btn-success" type="submit">
-                                        Recherche
-                                    </button>
+
                                 </div>
                             </form>
+                            <div id="results"></div>
                         </div>
                     </div>
                     <div class="col-lg-2">
