--- a/templates/main/reservation.html.twig
+++ b/templates/main/reservation.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
 
-    <div class="container py-4">
+    <div class="container py-4" id="reservation-view">
         <div class="border border-danger bg-orange-lighter py-2 px-3 w-responsive mx-auto">
-            <h2 class="text-danger text-center">{{ resto.nom }}</h2>
+            <h2 class="text-danger text-center" id="reservation-title">{{ resto.nom }}</h2>
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-12 col-lg-4 d-flex flex-column justify-content-center order-lg-first order-last">
