--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import "libs/bootstrap.scss";
+@import "libs/bootstrap-datepicker3.min.css";
 @import "variable/variable.scss";
 @import "common/common.scss";
 @import 'accueil/accueil.scss';
