--- a/templates/main/layout/header.html.twig
+++ b/templates/main/layout/header.html.twig
@@ -6,21 +6,23 @@
                 <div class="row mt-4">
                     <div class="col">
                         <div class="card p-4">
+
                             <form>
+
                                 <div class="col-auto p-2">
 
                                     <input type="search" class="form-control fa" id="input-search" placeholder="&#xf2e7; Nom du restaurant">
                                 </div>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="code_postal" placeholder="&#xf3c5; Code Postal">
+                                    <input type="text" class="form-control fa" id="input-search" placeholder="&#xf3c5; Code Postal">
                                 </div>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="type_cuisine" placeholder="&#xf562; Type de cuisine">
+                                    <input type="text" class="form-control fa" id="input-search" placeholder="&#xf562; Type de cuisine">
                                 </div>
                                 <div class="col p-2">
-
+                                <btn class="btn btn-block btn-success">Rechercher</btn>
                                 </div>
                             </form>
                             <div id="results"></div>
