--- a/templates/main/layout/footer.html.twig
+++ b/templates/main/layout/footer.html.twig
@@ -6,10 +6,10 @@
 
         <div class="col-lg-6 col-md-8 col-12 mt-2 mt-md-0">
             <ul class="d-md-flex">
-                <li class="me-1"><a href="#" class="text-white">CGU </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
-                <li class="me-1"><a href="#" class="text-white">CGV </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
-                <li class="me-1"><a href="{{path('mentions-legales')}}"  class="text-white">mentions légales </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
-                <li class="me-1"><a href="#" class="text-white">politique de confidentialité</a></li>
+                <li class="me-1"><a href="#" class="text-white">{{ 'static.footer.cgu'|trans }} </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="#" class="text-white">{{ 'static.footer.cgv'|trans }} </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="{{path('mentions-legales')}}"  class="text-white">{{ 'static.footer.mentionLegale'|trans }} </a> <span class="d-none d-md-inline-flex text-white"> - </span></li>
+                <li class="me-1"><a href="#" class="text-white">{{ 'static.footer.politique'|trans }}</a></li>
             </ul>
         </div>
     </div>
