--- a/templates/main/layout/header.html.twig
+++ b/templates/main/layout/header.html.twig
@@ -2,26 +2,26 @@
     <div class="container">
         <div class="row">
             <div class="col-7">
-                <h1 class="text-danger">Découvrez et réservez le meilleur restaurant</h1>
+                <h1 class="text-danger">{{'static.header.title'|trans}}</h1>
                 <div class="row mt-4">
                     <div class="col">
                         <div class="card p-4">
                             <form>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="name" placeholder="&#xf2e7; Nom du restaurant">
+                                    <input type="text" class="form-control fa" id="name" placeholder="&#xf2e7; {{ 'static.header.form.nameResto'|trans }}">
                                 </div>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="code_postal" placeholder="&#xf3c5; Code Postal">
+                                    <input type="text" class="form-control fa" id="code_postal" placeholder="&#xf3c5; {{ 'static.header.form.codePostal'|trans }}">
                                 </div>
                                 <div class="col-auto p-2">
 
-                                    <input type="text" class="form-control fa" id="type_cuisine" placeholder="&#xf562; Type de cuisine">
+                                    <input type="text" class="form-control fa" id="type_cuisine" placeholder="&#xf562; {{ 'static.header.form.typeCuisine'|trans }}">
                                 </div>
                                 <div class="col p-2">
                                     <button class="btn btn-block btn-success" type="submit">
-                                        Recherche
+                                        {{ 'static.header.form.submit'|trans }}
                                     </button>
                                 </div>
                             </form>
